--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 					$('h2').text(l.toFixed(2)).attr('danger',isDanger);
 
-					if(isDanger) navigator.vibrate(500);
+					if(isDanger) navigator.vibrate([100, 30, 100, 30, 100, 30, 200, 30, 200, 30, 200, 30, 100, 30, 100, 30, 100]);
 				},100)
 			}
 		})
